# ComputeLibrary

./: .gitignore  CMakeLists.txt  arm_compute_version.embed
basic_component_test/: CMakeLists.txt  test_Tensor.cpp  test_dimensions.cpp  test_tensorshape.cpp  test_types.cpp  test_utils.cpp
cmake/: Options.cmake
custom_test/cpp/basic_component_test/: CMakeLists.txt  test_Tensor.cpp
custom_test/cpp/basic_component_test/test_example/: test_Tensor  test_types
custom_test/cpp/build_so/: CMakeLists.txt
custom_test/npy_data/: a.npy  b.npy  gen_npy.py
src/: CMakeLists.txt
src/core/: Version.cpp
src/runtime/: Utils.cpp
